Environment/Service/deploy/manifest.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: environment-database
  namespace: home-monitor
  labels:
    app: environment-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: environment-database
  serviceName: environment-database
  template:
    metadata:
      labels:
        app: environment-database
    spec:
      containers:
      - name: environment-database
        image: mcr.microsoft.com/mssql/server
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: data
            mountPath: /var/opt/mssql       
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: kubernetes
      schedulerName: default-scheduler
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path
        resources:
          requests:
            storage: 4Gi
---
kind: Service
apiVersion: v1
metadata:
  name: environment-database
spec:
  ports:
  - name: client
    port: 1435
  selector:
    app: environment-database
  type: LoadBalancer
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: environment-service
  namespace: home-monitor
  labels:
    app: environment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: environment-service
  template:
    metadata:
      labels:
        app: environment-service
    spec:
      containers:
      - name: environment-service
        image: ckaczor/home-monitor-environment-service:#BUILD_BUILDNUMBER#
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: Always
        securityContext:
          privileged: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: kubernetes
      schedulerName: default-scheduler
---
kind: Service
apiVersion: v1
metadata:
  name: environment-service
spec:
  ports:
  - name: client
    port: 80
  selector:
    app: environment-service
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: environment
  namespace: home-monitor
spec:
  routes:
  - kind: Rule
    match: PathPrefix(`/api/environment`)
    middlewares:
    - name: api-environment
      namespace: home-monitor
    services:
    - kind: Service
      name: environment-service
      namespace: home-monitor
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: api-environment
  namespace: home-monitor
spec:
  stripPrefix:
    prefixes:
    - /api/environment
